[gd_scene load_steps=25 format=3 uid="uid://dujsb6a1x1f2h"]

[ext_resource type="Script" path="res://scripts/poisson.gd" id="1_u0366"]
[ext_resource type="Texture2D" uid="uid://b3x7situ8opjy" path="res://assets/sprites/poisson.png" id="2_5ufbi"]
[ext_resource type="PackedScene" uid="uid://bde6mn6mtrhuy" path="res://scenes/health_bar.tscn" id="3_elttu"]
[ext_resource type="Script" path="res://scripts/area_2d_tamtam.gd" id="4_63yv2"]
[ext_resource type="PackedScene" uid="uid://bfucm7dcx3vow" path="res://scenes/agro_zone.tscn" id="5_xs183"]
[ext_resource type="AudioStream" uid="uid://bq2vvbiu5suvu" path="res://assets/sfx/Explosion6.wav" id="6_0ixcy"]
[ext_resource type="AudioStream" uid="uid://c75myapoxhonv" path="res://assets/sfx/Hit_Hurt4.wav" id="7_k1vha"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vuvq7"]
atlas = ExtResource("2_5ufbi")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7hmn"]
atlas = ExtResource("2_5ufbi")
region = Rect2(64, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_271tf"]
atlas = ExtResource("2_5ufbi")
region = Rect2(128, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvf2p"]
atlas = ExtResource("2_5ufbi")
region = Rect2(192, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4avmu"]
atlas = ExtResource("2_5ufbi")
region = Rect2(0, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgufl"]
atlas = ExtResource("2_5ufbi")
region = Rect2(64, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ds6c"]
atlas = ExtResource("2_5ufbi")
region = Rect2(128, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kiyi"]
atlas = ExtResource("2_5ufbi")
region = Rect2(192, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xf42l"]
atlas = ExtResource("2_5ufbi")
region = Rect2(0, 64, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_18p52"]
atlas = ExtResource("2_5ufbi")
region = Rect2(64, 64, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8yuh"]
atlas = ExtResource("2_5ufbi")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wotxl"]
atlas = ExtResource("2_5ufbi")
region = Rect2(64, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d864i"]
atlas = ExtResource("2_5ufbi")
region = Rect2(128, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x1w02"]
atlas = ExtResource("2_5ufbi")
region = Rect2(192, 0, 64, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_whlma"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vuvq7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j7hmn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_271tf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvf2p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4avmu")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_fgufl")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_7ds6c")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_1kiyi")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_xf42l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_18p52")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8yuh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wotxl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d864i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1w02")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="GDScript" id="GDScript_ame32"]
script/source = "extends AnimatedSprite2D


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xtvla"]
radius = 20.0623
height = 64.1841

[node name="poisson" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 4
collision_mask = 18
script = ExtResource("1_u0366")
MAX_HEALTH = 200
CURRENT_HEALTH = 200
SPEED = 3.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
light_mask = 2
visibility_layer = 2
position = Vector2(-2, -4)
sprite_frames = SubResource("SpriteFrames_whlma")
animation = &"attack"
autoplay = "walk"
frame = 9
frame_progress = 1.0
script = SubResource("GDScript_ame32")

[node name="ProgressBar" parent="AnimatedSprite2D" instance=ExtResource("3_elttu")]
offset_left = -13.0
offset_top = -19.0
offset_right = -2.0
offset_bottom = -15.0
metadata/_edit_use_anchors_ = true

[node name="Area2D" type="Area2D" parent="."]
rotation = -1.68135
collision_layer = 4
script = ExtResource("4_63yv2")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(11.262, -19.8788)
rotation = 0.0719
shape = SubResource("CapsuleShape2D_xtvla")

[node name="hitzone" type="CollisionShape2D" parent="."]
position = Vector2(-21, -10)
rotation = -1.62809
shape = SubResource("CapsuleShape2D_xtvla")

[node name="AgroZone" parent="." instance=ExtResource("5_xs183")]
visible = true
position = Vector2(-2, -4)
rotation = -0.0409633

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 1.35

[node name="deathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_0ixcy")
bus = &"SFX"

[node name="hurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_k1vha")
bus = &"SFX"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="AgroZone" to="." method="_on_agro_zone_body_entered"]
[connection signal="body_exited" from="AgroZone" to="." method="_on_agro_zone_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
